--- a/www/index.html
+++ b/www/index.html
@@ -162,7 +162,7 @@
     <script>
         function openURL(urlString){
             myURL = encodeURI(urlString);
-            window.open(myURL, '_blank', 'location=yes');
+            window.open(myURL, '_system', 'location=yes');
         }
     </script>
     
