--- a/www/index.html
+++ b/www/index.html
@@ -84,7 +84,7 @@
                 <div class="home-display">
                     
                 <h3>Killian Brennan</h3>
-                <p>2013 PLAYERS PLAYER OF THE YEAR</p>
+                <p id="desc">2013 PLAYERS PLAYER OF THE YEAR</p>
                 <!--<img class="home-image"/>-->
                     
                 </div>
