--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,7 @@
     setTimeout(function(){
         navigator.splashscreen.hide();
         
-    }, 3000);
+    }, 1500);
         
                 // do your thing!
                 // navigator.notification.alert("Cordova is working");     
@@ -158,7 +158,8 @@
     <!--<script src="js/fast.js"></script>-->
     <!--<script src="js/snap.js"></script>-->
     <script src="js/custom/jquery.mobile.custom.min.js"></script>
-    <script src="js/index.js"></script>
+    <!--<script src="js/index.js"></script>-->
+    <script src="js/index_min.js"></script>
     <script>
         function openURL(urlString){
             myURL = encodeURI(urlString);
